--- a/frontend/nginx-frontend.conf
+++ b/frontend/nginx-frontend.conf
@@ -9,14 +9,9 @@ server {
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-    # Serve static assets with cache headers
-    location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
-        expires 1y;
-        add_header Cache-Control "public, immutable";
-    }
-
-    # Handle React Router - serve index.html for all routes
+    # Serve static assets directly from root
     location / {
-        try_files $uri $uri/ /index.html;
+        try_files $uri $uri/ /index.html =404;
+        add_header Cache-Control "public, max-age=31536000, immutable";
     }
 }
