--- a/frontend/nginx-frontend.conf
+++ b/frontend/nginx-frontend.conf
@@ -1,17 +1,27 @@
 server {
     listen 80;
     server_name localhost;
-
-    root /usr/share/nginx/html/purr-posal;
+    
+    root /usr/share/nginx/html;
     index index.html;
-
-    # Enable gzip compression
-    gzip on;
-    gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-
-    # Serve static assets directly from root
-    location / {
-        try_files $uri $uri/ /index.html =404;
-        add_header Cache-Control "public, max-age=31536000, immutable";
+    
+    location /purr-posal/ {
+        alias /usr/share/nginx/html/purr-posal/;
+        try_files $uri $uri/ /purr-posal/index.html;
+        
+        add_header X-Frame-Options "SAMEORIGIN" always;
+        add_header X-Content-Type-Options "nosniff" always;
+        add_header X-XSS-Protection "1; mode=block" always;
     }
+    
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+        add_header Content-Type text/plain;
+    }
+    
+    gzip on;
+    gzip_vary on;
+    gzip_min_length 1024;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript application/json application/xml+rss;
 }
